<?xml version="1.0"?>
<package format="2">
  <name>zerobot_bringup</name>
  <version>1.0.0</version>
  <description>The zerobot_bringup package</description>
  <author email="chenzhiwo@139.com">Chengzhi Chen</author>
  <maintainer email="chenzhiwo@139.com">Chengzhi Chen</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>zerobot_driver</exec_depend>
  <exec_depend>zerobot_plugin</exec_depend>

  <export>
  </export>
</package>