<?xml version="1.0"?>
<package format="2">
  <name>zerobot_msgs</name>
  <version>1.0.0</version>
  <description>Messages for zerobot</description>
  <author email="chenzhiwo@139.com">Chengzhi Chen</author>
  <maintainer email="chenzhiwo@139.com">Chengzhi Chen</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>