<?xml version="1.0"?>
<package format="2">
  <name>zerobot_robot</name>
  <version>1.0.0</version>
  <description>The zerobot package</description>
  <author email="chenzhiwo@outlook.com">Chengzhi Chen</author>
  <maintainer email="chenzhiwo@outlook.com">Chengzhi Chen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>zerobot_bringup</exec_depend>
  <exec_depend>zerobot_driver</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
