<?xml version="1.0"?>
<package format="2">
  <name>zerobot_robot</name>
  <version>1.0.0</version>
  <description>The zerobot package</description>
  <author email="chenzhiwo@139.com">Chengzhi Chen</author>
  <maintainer email="chenzhiwo@139.com">Chengzhi Chen</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>zerobot_bringup</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
